updated todo, messed around w footer, fixed code highlight

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <br>
 <div class="box">
     <p class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
-    <p>
+    <div>
         Hello! I’m Max Vogel. I’m a
 
         <script>
@@ -54,32 +54,35 @@
             document.write("" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365))));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
         </script>
 
-        year old who goes to Middleton High School. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
-        photo of me at UW’s 2019 Madhacks</a>. In my free time I am probably fencing, coding, CADing, playing
-        TF2 competitively, or am working on something <a href="https://www.team1306.com">1306</a> related.
-    </p>
+        living in Middleton, WI. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
+        photo of me at UW’s 2019 Madhacks</a>. In my free time I enjoy fencing, coding, CADing, and working on
+        stuff <a href="https://www.team1306.com">1306</a> related.
+    </div>
 
-    <p>
+    <div style="padding-top: 2em">
         <b>Me</b><br>
-        - Email&emsp;&emsp;&emsp;&emsp;/ mehvix <code>at</code> protonmail <code>dot</code> com -- <a href="pgp.html">PGP
-        key</a><br>
-        - Github&emsp;&emsp;&emsp;/ <a href="https://github.com/mehvix">Mehvix</a><br>
-        - Discord &emsp;/ Mehvix#7966<br>
-        - Linkedin&emsp;/ <a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a><br>
-        - Keybase&emsp;&emsp;/ <a href="https://keybase.io/mehvix">Mehvix</a><br>
-        - Resumé&emsp;&emsp;&emsp;/ <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
-    </p><br>
 
-    <p>
+        <div>
+            - Email&emsp;&emsp;&emsp;&emsp;/ mehvix <code>at</code> protonmail <code>dot</code> com -- <a
+                href="pgp.html">PGP
+            key</a><br>
+            - Github&emsp;&emsp;&emsp;/ <a href="https://github.com/mehvix">Mehvix</a><br>
+            - Discord &emsp;/ Mehvix#7966<br>
+            - Linkedin&emsp;/ <a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a><br>
+            - Keybase&emsp;&emsp;/ <a href="https://keybase.io/mehvix">Mehvix</a><br>
+            - Resumé&emsp;&emsp;&emsp;/ <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
+        </div>
+    </div>
+
+    <div style="padding-top: 2em">
         <b>Pages</b><br>
         - <a href="posts/index.html"> posts</a><br>
         - <a href="projects.html"> projects</a><br>
         - <a href="todo.html"> todo</a><br>
         - <a href="serverservices.html">server service</a><br>
-    </p>
+    </div>
 
-    ---
-    <p class="footer">
+    <div id="footer">
         BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
         ETH / <a
             href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -88,7 +91,7 @@
             document.write("" + new Date().getFullYear())
         </script>
         - Max Vogel
-    </p>
+    </div>
 </div>
 </body>
 </html>
