--- a/mc.html
+++ b/mc.html
@@ -25,8 +25,8 @@
         Your browser does not support embedded video through HTML5 :(
     </video>
 
-    ---
-    <p class="footer">
+
+    <div id="footer">
         BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
         ETH / <a
             href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -35,7 +35,7 @@
             document.write("" + new Date().getFullYear())
         </script>
         - Max Vogel
-    </p>
+    </div>
 </div>
 </body>
 </html>
