--- a/serverservices.html
+++ b/serverservices.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <link type="text/css" rel="stylesheet" href="static/css/style.css" >
+    <link type="text/css" rel="stylesheet" href="static/css/style.css">
     <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <title>Mehvix | cloud</title>
     <style>
-        :root{
+        :root {
             --outside-bg-color: #2770c0;
             --inside-bg-color: #e3e3e3;
         }
@@ -18,30 +18,34 @@
 <body>
 <br>
 <div class="box">
-    <p class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server Services</a></b><br></p>
+    <p class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server
+        Services</a></b><br></p>
     If you're interested in any of these or have any questions, my contact information is on the
-    <a href="./index.html">home page</a>.<br>
+    <a href="./index.html">home page</a>.
     ---
-    <p>
+
+    <div style="padding-top: 1em">
         <b style="font-size: 100%">File Hosting and Media Streaming</b><br>
         I’m selfhosting a Nextcloud instance at <a href="https://cloud.mehvix.com">cloud.mehvix.com</a> which
-        acts as a file hosting service and has addons for WebCAL, Tasks, and Contact syncing as well as a
-        password manager and non-intrusive map service. Additionally, you're able to stream media via Jellyfin
-        too. Here's pricing (monthly):
-    </p>
-    <p>
-        - 128GB  &emsp;&emsp;- $3.00<br>
-        - 256GB  &emsp;&emsp;- $5.00<br>
-        - 256GB+ &emsp;- Contact me<br><br>
-    </p>
+        acts as a file hosting service and has addons for WebCAL, Tasks, Contacts, a password manager, and a
+        non-intrusive map service. Here's pricing:
+        <blockquote>
+            - 128GB &emsp;&emsp;- $3.00<br>
+            - 256GB &emsp;&emsp;- $5.00<br>
+            - 256GB+ &emsp;- Contact me<br><br>
+        </blockquote>
+    </div>
 
-    <p>
+
+    <div>
         <b style="font-size: 100%">TF2 / <a href="mc.html">Minecraft Server</a></b><br>
-        I'll set up a server instance for TF2 / Minecraft. I'm open to other game servers too, but TF2 and Minecraft are the 2 game servers I have experience configuring. If you are an experienced user I'll also give you the login credentials. $5.00 gets you 16 players slots (and 2 GB RAM for MC).
-    </p>
+        I'll set up a server instance for TF2 / Minecraft. I'm open to other game servers too, but TF2 and Minecraft are
+        the game servers I have experience configuring. If you are an experienced user I'll also give you the login
+        credentials. $5.00 gets you 16 players slots (and 2 GB RAM for MC).
+    </div>
 
-    ---
-    <p class="footer">
+
+    <div id="footer">
         BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
         ETH / <a
             href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -50,6 +54,7 @@
             document.write("" + new Date().getFullYear())
         </script>
         - Max Vogel
-    </p></div>
+    </div>
+</div>
 </body>
 </html>
