--- a/projects-wip.html
+++ b/projects-wip.html
@@ -152,8 +152,8 @@
         </table>
     </article>
 
-    ---
-    <p class="footer">
+
+    <div id="footer">
         BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
         ETH / <a
             href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -162,7 +162,7 @@
             document.write("" + new Date().getFullYear())
         </script>
         - Max Vogel
-    </p>
+    </div>
 
 </div>
 </body>
