--- a/todo.html
+++ b/todo.html
@@ -56,13 +56,6 @@
             <p>- <a href="https://www.reddit.com/r/MouseReview/">/r/MouseReview</a> has some good resources</p>
         </blockquote>
 
-        <p>- Setup a security camera network</p>
-        <blockquote>
-            <p>- Gonna need a lotta pi zeros and PS2 webcams</p>
-        </blockquote>
-
-        <p>- AI for Age of Empires 2</p>
-
         <p>- Remote car starter for the winter</p>
 
         <p>- Custom drone with 3D print parts</p>
@@ -70,12 +63,6 @@
         <p>- Successfully 3D print a key</p>
         <blockquote>
             <p>- <a href="https://youtu.be/7kJnGZlirpI">Interesting talk on 3D printing keys</a></p>
-        </blockquote>
-
-        <p>- Some audio-electrical project – altoid amp, speakers, etc.</p>
-        <blockquote>
-            <p>- Inspired by <a href="https://youtu.be/-LF3Cy5hZbc?list=PLkVbIsAWN2luLeViTZ499dZNsZHavrGBE&amp;t=503">Louis
-                Rossmann</a></p>
         </blockquote>
 
         <p>- Software + Hardware keylogger</p>
@@ -91,13 +78,19 @@
         <blockquote>
             <p>- Integrate with <a href="https://github.com/Mehvix/Equalizer">Equalizer?</a></p>
         </blockquote>
+
+        <p>- "Jon Bois"-esk video about Richard Russel</p>
+        <blockquote>
+            <p>- <a href="https://en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident">Wikipedia Article</a></p>
+            <p>- <a href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC">Jon Bois's Pretty
+                Good Series</a></p>
+        </blockquote>
     </article>
 
     <!--			<h3 style="text-align: center"><a href="./index.html">Return home.</a></h3>-->
     <!--			<h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>-->
 
-    ---
-    <p class="footer">
+    <div id="footer">
         BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
         ETH / <a
             href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -106,7 +99,7 @@
             document.write("" + new Date().getFullYear())
         </script>
         - Max Vogel
-    </p>
+    </div>
 </div>
 </body>
 </html>
