small css stuff

--- a/serverservices.html
+++ b/serverservices.html
@@ -32,7 +32,7 @@
         <blockquote>
             - 128GB &emsp;&emsp;- $3.00<br>
             - 256GB &emsp;&emsp;- $5.00<br>
-            - 256GB+ &emsp;- Contact me<br><br>
+            - 256GB+ &emsp;- Contact me
         </blockquote>
     </div>
 
