--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="box">
     <p class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
     <div>
-        Hello! I’m Max Vogel. I’m a
+        Hello! I’m Max Vogel. I’m 
 
         <script>
             var today = new Date();  //initializes to current date
@@ -54,7 +54,7 @@
             document.write("" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365))));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
         </script>
 
-        living in Middleton, WI. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
+        and live in Middleton, WI. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
         photo of me at UW’s 2019 Madhacks</a>. In my free time I enjoy fencing, coding, CADing, and working on
         stuff <a href="https://www.team1306.com">1306</a> related.
     </div>
