stop roasting me

--- a/todo.html
+++ b/todo.html
@@ -79,7 +79,7 @@
             <p>- Integrate with <a href="https://github.com/Mehvix/Equalizer">Equalizer?</a></p>
         </blockquote>
 
-        <p>- "Jon Bois"-esk video about Richard Russel</p>
+        <p>- "Jon Bois" style video about Richard Russel</p>
         <blockquote>
             <p>- <a href="https://en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident">Wikipedia Article</a></p>
             <p>- <a href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC">Jon Bois's Pretty
