--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 
     <div style="padding-top: 2em">
         <b>Pages</b><br>
-        - <a href="posts/index.html"> posts</a><br>
-        - <a href="projects.html"> projects</a><br>
-        - <a href="todo.html"> todo</a><br>
-        - <a href="serverservices.html">server service</a><br>
+        - <a href="quotes.html">Quotes</a><br>
+        - <a href="posts/index.html">Posts</a><br>
+        - <a href="projects.html">Projects</a><br>
+        - <a href="todo.html">Todo</a><br>
+        - <a href="serverservices.html">Server Service</a><br>
     </div>
 
     <div id="footer">
