--- a/todo.html
+++ b/todo.html
@@ -6,7 +6,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
     <script src="static/js/include.js"></script>
     <meta charset="utf-8">
-    <title>Mehvix | todo</title>
+    <title>Mehvix | #todo</title>
     <style>
         :root {
             --outside-bg-color: #306a4a;
