--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <script src="static/js/include.js"></script>
 
     <meta charset="utf-8">
-    <title>Mehvix | music</title>
+    <title>Mehvix | Music</title>
     <style>
         :root {
             --outside-bg-color: #282828;
