--- a/pgp.html
+++ b/pgp.html
@@ -7,7 +7,7 @@
     <script src="static/js/include.js"></script>
 
     <meta charset="utf-8">
-    <title>Mehvix | pgp</title>
+    <title>Mehvix | PGP</title>
     <style>
         :root {
             --code-bg-color: #210124;
