--- a/serverservices.html
+++ b/serverservices.html
@@ -7,7 +7,7 @@
     <script src="static/js/include.js"></script>
 
     <meta charset="utf-8">
-    <title>Mehvix | cloud</title>
+    <title>Mehvix | Cloud</title>
     <style>
         :root {
             --outside-bg-color: #2770c0;
