--- a/quotes.html
+++ b/quotes.html
@@ -39,32 +39,9 @@
         </div>
 
         <div style="margin-bottom: 3em">
-            <b>Solution</b>
-            <blockquote style="margin-bottom: 0">
-                Nothing is so permanent as a temporary [government] solution.
-            </blockquote>
-            <p style="margin-top: .5em">— Milton Friedman
-            </p>
-        </div>
-
-        <div style="margin-bottom: 3em">
             <b>Your Obituary</b>
             <blockquote style="margin-bottom: 0">
-                "How will you know if you were a good judge?"<br>
-                <br>
-                “Senator, that’s a question I ask my kids every semester when I teach ethics ... they hate it. They
-                think it’s corny. Well, it might be a little corny. And then I'll ask them if they want to read some of
-                them. And people want to be remembered for the kindnesses they showed other people, by and large. It’s
-                not how big your bank account balance is, nobody ever puts that in their draft obituary, or that they
-                billed the most hours, or that they won the most cases.<br><br>
-
-
-                It’s how they treated other people along the way.<br><br>
-
-                And for me, it’s the words I read yesterday from Increase Sumner’s tombstone. And that means as a
-                person, I’d like to be remembered as a good dad, a good husband, kind and
-                mild in private life, dignified and firm in public life. <br>
-                And I have no illusions that I’ll be remembered for very long. If Byron White is as nearly forgotten as
+                "And I have no illusions that I’ll be remembered for very long. If Byron White is as nearly forgotten as
                 he is now, as he said he would be, I have no illusions, I won’t last five minutes; that’s as it should
                 be. <br><br>
 
@@ -74,7 +51,8 @@
                 for me."
             </blockquote>
             <p style="margin-top: .5em">— <a
-                    href="https://www.c-span.org/video/?c4662446/user-clip-senator-ben-sasse-questions-judge-neil-gorsuch">Judge Neil Gorsuch</a>
+                    href="https://www.c-span.org/video/?c4662446/user-clip-senator-ben-sasse-questions-judge-neil-gorsuch">Judge
+                Neil Gorsuch</a>
             </p>
         </div>
 
@@ -95,7 +73,8 @@
                 corner of evil.”
             </blockquote>
             <p style="margin-top: .5em">— <a
-                    href="http://libgen.rs/book/index.php?md5=5D5620C06690FF231D4DDF0F8D598243">Aleksandr Solzhenitsyn, The Gulag Archipelago</a>
+                    href="http://libgen.rs/book/index.php?md5=5D5620C06690FF231D4DDF0F8D598243">Aleksandr Solzhenitsyn,
+                The Gulag Archipelago</a>
             </p>
         </div>
 
@@ -105,18 +84,26 @@
             <blockquote style="margin-bottom: 0">
                 In the desert<br>
                 I saw a creature, naked, bestial,<br>
-                Who, squatting upon the ground,<br>
+                who, squatting upon the ground,<br>
                 Held his heart in his hands,<br>
                 And ate of it.<br>
-                I said, “Is it good, friend?”<br>
-                “It is bitter—bitter,” he answered;<br>
-                <br>
-                “But I like it<br>
-                “Because it is bitter,<br>
-                “And because it is my heart.”<br>
+                I said, "Is it good, friend?"<br>
+                "It is bitter bitter," he answered;<br>
+                "But I like it<br>
+                Because it is bitter,<br>
+                And because it is my heart."<br>
             </blockquote>
             <p style="margin-top: .5em">— <a
-                    href="https://www.poetryfoundation.org/poems/46457/in-the-desert-56d2265793693">Stephen Crane</a>
+                    href="https://public.wsu.edu/~campbelld/crane/black.htm">Stephen Crane</a>
+            </p>
+        </div>
+
+        <div style="margin-bottom: 3em">
+            <b>Solution</b>
+            <blockquote style="margin-bottom: 0">
+                Nothing is so permanent as a temporary [government] solution.
+            </blockquote>
+            <p style="margin-top: .5em">— Milton Friedman
             </p>
         </div>
 
