--- a/quotes.html
+++ b/quotes.html
@@ -99,6 +99,18 @@
         </div>
 
         <div style="margin-bottom: 3em">
+            <b>Free Thought</b>
+            <blockquote style="margin-bottom: 0">
+                "He who knows only his own side of the case knows little of that. His reasons may be good, and no one
+                may have been able to refute them. But if he is equally unable to refute the reasons on the opposite
+                side, if he does not so much as know what they are, he has no ground for preferring either opinion."
+            </blockquote>
+            <p style="margin-top: .5em">—
+                <a href="http://libgen.rs/book/index.php?md5=5CA9C496EE645E2688AFAFDA58C0E411">John Stuart Mill </a>
+            </p>
+        </div>
+
+        <div style="margin-bottom: 3em">
             <b>Solution</b>
             <blockquote style="margin-bottom: 0">
                 Nothing is so permanent as a temporary [government] solution.
