--- a/quotes.html
+++ b/quotes.html
@@ -27,6 +27,16 @@
     <div>
 
         <div style="margin-bottom: 3em">
+            <b>Tech</b>
+            <blockquote style="margin-bottom: 0">
+                The best minds of my generation are thinking about how to make people click ads.
+            </blockquote>
+            <p style="margin-top: .5em">— <a
+                    href="https://www.bloomberg.com/news/articles/2011-04-14/this-tech-bubble-is-different">Jeff Hammerbacher</a>
+            </p>
+        </div>
+
+        <div style="margin-bottom: 3em">
             <b>Intermediate Axis Theorem</b>
             <blockquote style="margin-bottom: 0">
                 For example, John Mallinckrodt (CSU Pomona) relates the story of a student asking Richard Feynman if
@@ -107,15 +117,6 @@
             </blockquote>
             <p style="margin-top: .5em">—
                 <a href="http://libgen.rs/book/index.php?md5=5CA9C496EE645E2688AFAFDA58C0E411">John Stuart Mill </a>
-            </p>
-        </div>
-
-        <div style="margin-bottom: 3em">
-            <b>Solution</b>
-            <blockquote style="margin-bottom: 0">
-                Nothing is so permanent as a temporary [government] solution.
-            </blockquote>
-            <p style="margin-top: .5em">— Milton Friedman
             </p>
         </div>
 
