--- a/serverservices.html
+++ b/serverservices.html
@@ -20,29 +20,34 @@
 <div class="box">
     <p class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server
         Services</a></b><br></p>
-    If you're interested in any of these or have any questions, my contact information is on the
+    <p>
+        <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well as all other services, have moved to invite-only model.
+        Please do not contact me requesting an invite.
+    </p>
+
+    <!--If you're interested in any of these or have any questions, my contact information is on the
     <a href="./index.html">home page</a>.
     ---
 
-    <div style="padding-top: 1em">
+        <div style="padding-top: 1em">
         <b style="font-size: 100%">File Hosting and Media Streaming</b><br>
-        I’m selfhosting a Nextcloud instance at <a href="https://cloud.mehvix.com">cloud.mehvix.com</a> which
-        acts as a file hosting service and has addons for WebCAL, Tasks, Contacts, a password manager, and a
-        non-intrusive map service. Here's pricing:
-        <blockquote>
-            - 128GB &emsp;&emsp;- $3.00<br>
-            - 256GB &emsp;&emsp;- $5.00<br>
-            - 256GB+ &emsp;- Contact me
-        </blockquote>
-    </div>
+            I’m selfhosting a Nextcloud instance at <a href="https://cloud.mehvix.com">cloud.mehvix.com</a> which
+            acts as a file hosting service and has addons for WebCAL, Tasks, Contacts, a password manager, and a
+            non-intrusive map service. Here's pricing:
+            <blockquote>
+                - 128GB &emsp;&emsp;- $3.00<br>
+                - 256GB &emsp;&emsp;- $5.00<br>
+                - 256GB+ &emsp;- Contact me
+            </blockquote>
+        </div>
 
 
-    <div>
-        <b style="font-size: 100%">TF2 / <a href="mc.html">Minecraft Server</a></b><br>
-        I'll set up a server instance for TF2 / Minecraft. I'm open to other game servers too, but TF2 and Minecraft are
-        the game servers I have experience configuring. If you are an experienced user I'll also give you the login
-        credentials. $5.00 gets you 16 players slots (and 2 GB RAM for MC).
-    </div>
+        <div>
+            <b style="font-size: 100%">TF2 / <a href="mc.html">Minecraft Server</a></b><br>
+            I'll set up a server instance for TF2 / Minecraft. I'm open to other game servers too, but TF2 and Minecraft are
+            the game servers I have experience configuring. If you are an experienced user I'll also give you the login
+            credentials. $5.00 gets you 16 players slots (and 2 GB RAM for MC).
+        </div>-->
 
 
     <div id="footer">
