fixed copy, cleaned up css

--- a/quotes.html
+++ b/quotes.html
@@ -14,6 +14,26 @@
             --outside-bg-color: #3e1537;
         }
     </style>
+
+    <style>
+        div.main > div {
+            margin-bottom: 3em
+        }
+
+        div.main > div > blockquote {
+            margin-bottom: 0
+        }
+
+        div.main > div > p, div.main > div > a {
+            margin-top: .5em
+        }
+
+
+        div.main > div > p:before, div.main > div > a:before {
+            content: '— ';
+        }
+
+    </style>
 </head>
 <body>
 <br>
@@ -24,33 +44,62 @@
         <a href="#" class="inverse-bg">Quotes</a>
     </b></p><br>
 
-    <div>
+    <div class="main">
 
-        <div style="margin-bottom: 3em">
-            <b>Tech</b>
-            <blockquote style="margin-bottom: 0">
-                The best minds of my generation are thinking about how to make people click ads.
+        <div>
+            <b style="text-align: center">IMG 5148</b>
+            <blockquote>
+                "Basically, if you go to Youtube and you search the letters 'IMG', and then a space, and any random 4
+                numbers like 'IMG 5148' or 'IMG 0968', something like that, give it a search, and you will find this
+                collection of videos that were just automatically uploaded by some camera, or system, or something.
+                Usually they were unintentional, or accidental, or automatic uploads. So what this means is you'll find
+                a lot of videos, that have literally never been seen, uh, by anyone. They have 0 views and they've been
+                up for years. I saw one one time, that, it was this automated wildlife footage camera, that just shot
+                this up to Youtube. 0 view video, of this like rabbit and deer, like uh, snacking on the same piece of
+                shrubbery, or whatever, and I was like "This is amazing! These 2 animals are getting together, and I was
+                the only one in years to have seen it!" and I just found that incredible"
             </blockquote>
-            <p style="margin-top: .5em">— <a
-                    href="https://www.bloomberg.com/news/articles/2011-04-14/this-tech-bubble-is-different">Jeff Hammerbacher</a>
+            <p><a href="https://youtu.be/9l5C8cGMueY?t=1198">Jon Bois</a></p>
+        </div>
+
+        <div>
+            <b>Poker</b>
+            <blockquote>
+                "The secret is to just do whatever you want because there is no such thing as decisions. The way you end
+                up playing is the only way you could possibly have ever played. This hand is just the next stop on a
+                train that's been running for four billion years. Ever since life bubbled out of a simmering puddle of
+                acid. You could stick a thermometer in that puddle, give it a read, and know whether four billion years
+                later."
+            </blockquote>
+            <p><a href="https://youtu.be/bDt90EyZnWA?t=1651">Jon Bois</a></p>
+        </div>
+
+        <div>
+            <b>Tech</b>
+            <blockquote>
+                "The best minds of my generation are thinking about how to make people click ads."
+            </blockquote>
+            <p><a
+                    href="https://www.bloomberg.com/news/articles/2011-04-14/this-tech-bubble-is-different">Jeff
+                Hammerbacher</a>
             </p>
         </div>
 
-        <div style="margin-bottom: 3em">
+        <div>
             <b>Intermediate Axis Theorem</b>
-            <blockquote style="margin-bottom: 0">
+            <blockquote>
                 For example, John Mallinckrodt (CSU Pomona) relates the story of a student asking Richard Feynman if
                 there is any intuitive way to understand the result; Feynman went into deep thought for about 10 or 15
                 seconds and answered, "no."
             </blockquote>
-            <p style="margin-top: .5em">— <a
+            <p><a
                     href="https://sciencedemonstrations.fas.harvard.edu/presentations/tennis-racquet-flip">Source</a>
             </p>
         </div>
 
-        <div style="margin-bottom: 3em">
+        <div>
             <b>Your Obituary</b>
-            <blockquote style="margin-bottom: 0">
+            <blockquote>
                 "And I have no illusions that I’ll be remembered for very long. If Byron White is as nearly forgotten as
                 he is now, as he said he would be, I have no illusions, I won’t last five minutes; that’s as it should
                 be. <br><br>
@@ -60,16 +109,16 @@
                 carry it, and I have no illusions I’m going to last as long as you suggest, and that’ll be good enough
                 for me."
             </blockquote>
-            <p style="margin-top: .5em">— <a
+            <p><a
                     href="https://www.c-span.org/video/?c4662446/user-clip-senator-ben-sasse-questions-judge-neil-gorsuch">Judge
                 Neil Gorsuch</a>
             </p>
         </div>
 
 
-        <div style="margin-bottom: 3em">
+        <div>
             <b>Evil</b>
-            <blockquote style="margin-bottom: 0">
+            <blockquote>
                 “It was granted me to carry away from my prison years on my bent back, which nearly broke beneath its
                 load, this essential experience; how a human being becomes evil and how good. In the intoxication of
                 youthful successes I had felt myself to be infallible, and I was therefore cruel. In the surfeit of
@@ -82,16 +131,16 @@
                 bridgehead of good is retained. And even in the best of all hearts, there remains… an unuprooted small
                 corner of evil.”
             </blockquote>
-            <p style="margin-top: .5em">— <a
+            <p><a
                     href="http://libgen.rs/book/index.php?md5=5D5620C06690FF231D4DDF0F8D598243">Aleksandr Solzhenitsyn,
                 The Gulag Archipelago</a>
             </p>
         </div>
 
 
-        <div style="margin-bottom: 3em">
+        <div>
             <b>In the Desert</b>
-            <blockquote style="margin-bottom: 0">
+            <blockquote>
                 In the desert<br>
                 I saw a creature, naked, bestial,<br>
                 who, squatting upon the ground,<br>
@@ -103,26 +152,26 @@
                 Because it is bitter,<br>
                 And because it is my heart."<br>
             </blockquote>
-            <p style="margin-top: .5em">— <a
+            <p><a
                     href="https://public.wsu.edu/~campbelld/crane/black.htm">Stephen Crane</a>
             </p>
         </div>
 
-        <div style="margin-bottom: 3em">
+        <div>
             <b>Free Thought</b>
-            <blockquote style="margin-bottom: 0">
+            <blockquote>
                 "He who knows only his own side of the case knows little of that. His reasons may be good, and no one
                 may have been able to refute them. But if he is equally unable to refute the reasons on the opposite
                 side, if he does not so much as know what they are, he has no ground for preferring either opinion."
             </blockquote>
-            <p style="margin-top: .5em">—
+            <p>—
                 <a href="http://libgen.rs/book/index.php?md5=5CA9C496EE645E2688AFAFDA58C0E411">John Stuart Mill </a>
             </p>
         </div>
 
-        <div style="margin-bottom: 3em">
+        <div>
             <b>A Libertarian Puzzle</b>
-            <blockquote style="margin-bottom: 0">
+            <blockquote>
                 Allow me to oversimplify.<br><br>
                 People disagree about ends: Some people want to promote broader human flourishing, others want to
                 preserve the status quo. People disagree about means: Some people think unfettered markets will best
@@ -145,7 +194,7 @@
                 thing to accomplish your needs.<br><br>
                 Which leaves just one puzzle: why are there so few statists?
             </blockquote>
-            <p style="margin-top: .5em">— <a
+            <p><a
                     href="https://qblog.aaronsw.com/post/35407236090/a-libertarian-puzzle">Aaron Swartz</a>
             </p>
         </div>
