removed extra mdash

--- a/quotes.html
+++ b/quotes.html
@@ -164,9 +164,7 @@
                 may have been able to refute them. But if he is equally unable to refute the reasons on the opposite
                 side, if he does not so much as know what they are, he has no ground for preferring either opinion."
             </blockquote>
-            <p>—
-                <a href="http://libgen.rs/book/index.php?md5=5CA9C496EE645E2688AFAFDA58C0E411">John Stuart Mill </a>
-            </p>
+            <p><a href="http://libgen.rs/book/index.php?md5=5CA9C496EE645E2688AFAFDA58C0E411">John Stuart Mill </a><p>
         </div>
 
         <div>
