--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 <br>
 <div class="box">
-    <p class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
+    <div class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
     <div>
         Hello! I’m Max Vogel. I’m 
 
