--- a/pgp.html
+++ b/pgp.html
@@ -42,7 +42,7 @@
 <body>
 <br>
 <div class="box">
-    <p class="nav"><b><a href="./index.html">About</a> / <a href="pgp.html" class="inverse-bg">PGP</a></b><br>
+    <div class="nav"><b><a href="./index.html">About</a> / <a href="pgp.html" class="inverse-bg">PGP</a></b><br>
     <p>---</p>
     <a href="./static/media/publickey.mehvix@protonmail.com.asc">Download</a><br>
     <a href="#" onclick="copyText()">Copy</a>
