--- a/projects-wip.html
+++ b/projects-wip.html
@@ -19,7 +19,7 @@
 <br>
 <div class="box">
     <p style="margin-top: 0">
-    <p class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b></p>
+    <div class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b></p>
     <br>
     </p>
 
