--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 <body>
 <br>
 <div class="box">
-    <p class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b><br>
+    <div class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b><br>
     </p>
 
     <article>
