--- a/serverservices.html
+++ b/serverservices.html
@@ -18,7 +18,7 @@
 <body>
 <br>
 <div class="box">
-    <p class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server
+    <div class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server
         Services</a></b><br></p>
     <p>
         <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well as all other services, have moved to invite-only model.
