--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
 <body>
 <br>
 <div class="box">
-    <p class="nav"><b>
+    <div class="nav"><b>
         <a href="./index.html">About</a> /
 <!--        <a href="./folder/index.html">folder</a> /-->
         <a href="#" class="inverse-bg">xxx</a> <!--todo change-->
