--- a/todo.html
+++ b/todo.html
@@ -17,7 +17,7 @@
 <body>
 <br>
 <div class="box">
-    <p class="nav"><b><a href="./index.html">About</a> / <a href="todo.html" class="inverse-bg">#TODO</a></b></p>
+    <div class="nav"><b><a href="./index.html">About</a> / <a href="todo.html" class="inverse-bg">#TODO</a></b></p>
     <p>My mostly up-to-date list of future projects I haven't gotten around to yet.</p>
     ---
     </p>
