--- a/quotes.html
+++ b/quotes.html
@@ -38,7 +38,7 @@
 <body>
 <br>
 <div class="box">
-    <p class="nav"><b>
+    <div class="nav"><b>
         <a href="./index.html">About</a> /
         <!--        <a href="./folder/index.html">folder</a> /-->
         <a href="#" class="inverse-bg">Quotes</a>
