got rejected from stanford

--- a/quotes.html
+++ b/quotes.html
@@ -47,22 +47,6 @@
     <div class="main">
 
         <div>
-            <b style="text-align: center">IMG 5148</b>
-            <blockquote>
-                "Basically, if you go to Youtube and you search the letters 'IMG', and then a space, and any random 4
-                numbers like 'IMG 5148' or 'IMG 0968', something like that, give it a search, and you will find this
-                collection of videos that were just automatically uploaded by some camera, or system, or something.
-                Usually they were unintentional, or accidental, or automatic uploads. So what this means is you'll find
-                a lot of videos, that have literally never been seen, uh, by anyone. They have 0 views and they've been
-                up for years. I saw one one time, that, it was this automated wildlife footage camera, that just shot
-                this up to Youtube. 0 view video, of this like rabbit and deer, like uh, snacking on the same piece of
-                shrubbery, or whatever, and I was like "This is amazing! These 2 animals are getting together, and I was
-                the only one in years to have seen it!" and I just found that incredible"
-            </blockquote>
-            <p><a href="https://youtu.be/9l5C8cGMueY?t=1198">Jon Bois</a></p>
-        </div>
-
-        <div>
             <b>Poker</b>
             <blockquote>
                 "The secret is to just do whatever you want because there is no such thing as decisions. The way you end
@@ -95,6 +79,19 @@
             <p><a
                     href="https://sciencedemonstrations.fas.harvard.edu/presentations/tennis-racquet-flip">Source</a>
             </p>
+        </div>
+
+        <div>
+            <b>Advice</b>
+            <blockquote style="height: 180px; width: 240px;">  
+                <div style="position: absolute; top: 19%; left: 51.6%;">never</div>
+                <div style="position: absolute; top: 46.4%; left: 52.6%;">try</div>
+                <div style="position: absolute; top: 72.3%; left: 39.1%;">anything</div>
+                <div style="position: absolute; top: 83.7%; left: 5.7%;">that</div>
+                <div style="position: absolute; top: 85.9%; left: 38.3%;">is</div>
+                <div style="position: absolute; top: 68.8%; left: 61.6%;">difficult</div>
+            </blockquote>
+            <p><a href="https://youtu.be/ndmBCqds_gc?t=269">Jon Bois</a></p>
         </div>
 
         <div>
@@ -164,7 +161,7 @@
                 may have been able to refute them. But if he is equally unable to refute the reasons on the opposite
                 side, if he does not so much as know what they are, he has no ground for preferring either opinion."
             </blockquote>
-            <p><a href="http://libgen.rs/book/index.php?md5=5CA9C496EE645E2688AFAFDA58C0E411">John Stuart Mill </a><p>
+            <p><a href="http://libgen.rs/book/index.php?md5=5CA9C496EE645E2688AFAFDA58C0E411">John Stuart Mill </a></p>
         </div>
 
         <div>
@@ -195,6 +192,22 @@
             <p><a
                     href="https://qblog.aaronsw.com/post/35407236090/a-libertarian-puzzle">Aaron Swartz</a>
             </p>
+        </div>
+
+        <div>
+            <b style="text-align: center">IMG 5148</b>
+            <blockquote>
+                "Basically, if you go to Youtube and you search the letters 'IMG', and then a space, and any random 4
+                numbers like 'IMG 5148' or 'IMG 0968', something like that, give it a search, and you will find this
+                collection of videos that were just automatically uploaded by some camera, or system, or something.
+                Usually they were unintentional, or accidental, or automatic uploads. So what this means is you'll find
+                a lot of videos, that have literally never been seen, uh, by anyone. They have 0 views and they've been
+                up for years. I saw one one time, that, it was this automated wildlife footage camera, that just shot
+                this up to Youtube. 0 view video, of this like rabbit and deer, like uh, snacking on the same piece of
+                shrubbery, or whatever, and I was like "This is amazing! These 2 animals are getting together, and I was
+                the only one in years to have seen it!" and I just found that incredible"
+            </blockquote>
+            <p><a href="https://youtu.be/9l5C8cGMueY?t=1198">Jon Bois</a></p>
         </div>
 
 
