--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             document.write("" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365))));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
         </script>
 
-        and live in Middleton, WI.<a href="./static/media/IMG_20191020_011042.jpg">Here’s a
-        photo of me at UW’s 2019 Madhacks</a><img src="./static/media/expandoImage.svg" style="height: 1.4%;" onclick="toggleImage()"><img id='toggleImage' src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden">. In my free time I enjoy fencing, coding, CADing, and working on
+        and live in Middleton, WI. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
+        photo of me at UW’s 2019 Madhacks</a><img src="./static/media/expandoImage.svg" style="height: 1em; vertical-align: middle" onclick="toggleImage()"><img id='toggleImage' src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden">. In my free time I enjoy fencing, coding, CADing, and working on
         stuff <a href="https://www.team1306.com">1306</a> related.
     </div>
 
